// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render FLOAT_CONTROL correctly with default value to empty 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "FLOAT_CONTROL",
      "values": Object {},
    }
  }
  eventHandler={[Function]}
>
  <ControlNumber
    onChange={[Function]}
    onClear={[Function]}
    onSubmit={[Function]}
    placeholder="Float only"
    value=""
  >
    <ControlNumber__Container>
      <div
        className="ControlNumber__Container-gmlYuy rzEmK"
      >
        <Input
          focus={false}
          kind="primary"
          onChange={[Function]}
          placeholder="Float only"
          type="number"
          value=""
        >
          <input
            className="Input__Input-ixjKAz daZkvy"
            kind="primary"
            onChange={[Function]}
            placeholder="Float only"
            type="number"
            value=""
          />
        </Input>
        <ControlNumber__ButtonWrapper>
          <div
            className="ControlNumber__ButtonWrapper-iczkcP gmGCvf"
          >
            <ButtonClear
              onClick={[Function]}
            >
              <P
                onClick={[Function]}
              >
                <Component
                  className="P__P-KJbCR huqyql"
                  onClick={[Function]}
                >
                  <div
                    className="P__P-KJbCR huqyql"
                    onClick={[Function]}
                  >
                    <ButtonClear__StyledA>
                      <A
                        className="ButtonClear__StyledA-hPckxD cJqJoD"
                        color="primary"
                      >
                        <a
                          className="ButtonClear__StyledA-hPckxD cJqJoD A__A-cCPuKx fpwonb"
                          color="primary"
                        >
                          <IconDelete
                            size="1em"
                          >
                            <svg
                              fill="currentColor"
                              height="1em"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 24 24"
                              width="1em"
                            >
                              <path
                                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm9-10h1v10h-1V9zm-4 0h2v10h-2V9zM8 9h1v10H8V9zm7.5-5l-1-1h-5l-1 1H5v2h14V4h-3.5z"
                              />
                            </svg>
                          </IconDelete>
                          Clear
                        </a>
                      </A>
                    </ButtonClear__StyledA>
                  </div>
                </Component>
              </P>
            </ButtonClear>
            <Button
              active={false}
              block={false}
              component="button"
              disabled={false}
              kind="primary"
              onClick={[Function]}
              round={false}
              size="normal"
              square={false}
            >
              <BaseComponent
                active={false}
                block={false}
                className="Button__Button-jkHDFw hzHJoG"
                component="button"
                disabled={false}
                kind="primary"
                onClick={[Function]}
                round={false}
                size="normal"
                square={false}
              >
                <button
                  className="Button__Button-jkHDFw hzHJoG"
                  onClick={[Function]}
                >
                  Ok
                </button>
              </BaseComponent>
            </Button>
          </div>
        </ControlNumber__ButtonWrapper>
      </div>
    </ControlNumber__Container>
  </ControlNumber>
</DataChannelAdapter>
`;

exports[`should render FLOAT_CONTROL correctly with unit 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {
        "unit": "攝氏",
      },
      "id": "id",
      "type": "FLOAT_CONTROL",
      "values": Object {
        "value": 0.11,
      },
    }
  }
  eventHandler={[Function]}
>
  <ControlNumber
    onChange={[Function]}
    onClear={[Function]}
    onSubmit={[Function]}
    placeholder="Float only"
    unit="單位：攝氏"
    value={0.11}
  >
    <ControlNumber__Container>
      <div
        className="ControlNumber__Container-gmlYuy rzEmK"
      >
        <ControlNumber__Unixtype
          color="grayBase"
        >
          <P
            className="ControlNumber__Unixtype-hOgmLf cWpJIG"
            color="grayBase"
          >
            <Component
              className="ControlNumber__Unixtype-hOgmLf cWpJIG P__P-KJbCR kHKeHO"
              color="grayBase"
            >
              <p
                className="ControlNumber__Unixtype-hOgmLf cWpJIG P__P-KJbCR kHKeHO"
                color="grayBase"
              >
                單位：攝氏
              </p>
            </Component>
          </P>
        </ControlNumber__Unixtype>
        <Input
          focus={false}
          kind="primary"
          onChange={[Function]}
          placeholder="Float only"
          type="number"
          value={0.11}
        >
          <input
            className="Input__Input-ixjKAz daZkvy"
            kind="primary"
            onChange={[Function]}
            placeholder="Float only"
            type="number"
            value={0.11}
          />
        </Input>
        <ControlNumber__ButtonWrapper>
          <div
            className="ControlNumber__ButtonWrapper-iczkcP gmGCvf"
          >
            <ButtonClear
              onClick={[Function]}
            >
              <P
                onClick={[Function]}
              >
                <Component
                  className="P__P-KJbCR huqyql"
                  onClick={[Function]}
                >
                  <div
                    className="P__P-KJbCR huqyql"
                    onClick={[Function]}
                  >
                    <ButtonClear__StyledA>
                      <A
                        className="ButtonClear__StyledA-hPckxD cJqJoD"
                        color="primary"
                      >
                        <a
                          className="ButtonClear__StyledA-hPckxD cJqJoD A__A-cCPuKx fpwonb"
                          color="primary"
                        >
                          <IconDelete
                            size="1em"
                          >
                            <svg
                              fill="currentColor"
                              height="1em"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 24 24"
                              width="1em"
                            >
                              <path
                                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm9-10h1v10h-1V9zm-4 0h2v10h-2V9zM8 9h1v10H8V9zm7.5-5l-1-1h-5l-1 1H5v2h14V4h-3.5z"
                              />
                            </svg>
                          </IconDelete>
                          Clear
                        </a>
                      </A>
                    </ButtonClear__StyledA>
                  </div>
                </Component>
              </P>
            </ButtonClear>
            <Button
              active={false}
              block={false}
              component="button"
              disabled={false}
              kind="primary"
              onClick={[Function]}
              round={false}
              size="normal"
              square={false}
            >
              <BaseComponent
                active={false}
                block={false}
                className="Button__Button-jkHDFw hzHJoG"
                component="button"
                disabled={false}
                kind="primary"
                onClick={[Function]}
                round={false}
                size="normal"
                square={false}
              >
                <button
                  className="Button__Button-jkHDFw hzHJoG"
                  onClick={[Function]}
                >
                  Ok
                </button>
              </BaseComponent>
            </Button>
          </div>
        </ControlNumber__ButtonWrapper>
      </div>
    </ControlNumber__Container>
  </ControlNumber>
</DataChannelAdapter>
`;

exports[`should render FLOAT_CONTROL correctly with value 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "FLOAT_CONTROL",
      "values": Object {
        "value": 0.11,
      },
    }
  }
  eventHandler={[Function]}
>
  <ControlNumber
    onChange={[Function]}
    onClear={[Function]}
    onSubmit={[Function]}
    placeholder="Float only"
    value={0.11}
  >
    <ControlNumber__Container>
      <div
        className="ControlNumber__Container-gmlYuy rzEmK"
      >
        <Input
          focus={false}
          kind="primary"
          onChange={[Function]}
          placeholder="Float only"
          type="number"
          value={0.11}
        >
          <input
            className="Input__Input-ixjKAz daZkvy"
            kind="primary"
            onChange={[Function]}
            placeholder="Float only"
            type="number"
            value={0.11}
          />
        </Input>
        <ControlNumber__ButtonWrapper>
          <div
            className="ControlNumber__ButtonWrapper-iczkcP gmGCvf"
          >
            <ButtonClear
              onClick={[Function]}
            >
              <P
                onClick={[Function]}
              >
                <Component
                  className="P__P-KJbCR huqyql"
                  onClick={[Function]}
                >
                  <div
                    className="P__P-KJbCR huqyql"
                    onClick={[Function]}
                  >
                    <ButtonClear__StyledA>
                      <A
                        className="ButtonClear__StyledA-hPckxD cJqJoD"
                        color="primary"
                      >
                        <a
                          className="ButtonClear__StyledA-hPckxD cJqJoD A__A-cCPuKx fpwonb"
                          color="primary"
                        >
                          <IconDelete
                            size="1em"
                          >
                            <svg
                              fill="currentColor"
                              height="1em"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 24 24"
                              width="1em"
                            >
                              <path
                                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm9-10h1v10h-1V9zm-4 0h2v10h-2V9zM8 9h1v10H8V9zm7.5-5l-1-1h-5l-1 1H5v2h14V4h-3.5z"
                              />
                            </svg>
                          </IconDelete>
                          Clear
                        </a>
                      </A>
                    </ButtonClear__StyledA>
                  </div>
                </Component>
              </P>
            </ButtonClear>
            <Button
              active={false}
              block={false}
              component="button"
              disabled={false}
              kind="primary"
              onClick={[Function]}
              round={false}
              size="normal"
              square={false}
            >
              <BaseComponent
                active={false}
                block={false}
                className="Button__Button-jkHDFw hzHJoG"
                component="button"
                disabled={false}
                kind="primary"
                onClick={[Function]}
                round={false}
                size="normal"
                square={false}
              >
                <button
                  className="Button__Button-jkHDFw hzHJoG"
                  onClick={[Function]}
                >
                  Ok
                </button>
              </BaseComponent>
            </Button>
          </div>
        </ControlNumber__ButtonWrapper>
      </div>
    </ControlNumber__Container>
  </ControlNumber>
</DataChannelAdapter>
`;

exports[`should render FLOAT_CONTROL correctly with zero 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "FLOAT_CONTROL",
      "values": Object {
        "value": 0,
      },
    }
  }
  eventHandler={[Function]}
>
  <ControlNumber
    onChange={[Function]}
    onClear={[Function]}
    onSubmit={[Function]}
    placeholder="Float only"
    value={0}
  >
    <ControlNumber__Container>
      <div
        className="ControlNumber__Container-gmlYuy rzEmK"
      >
        <Input
          focus={false}
          kind="primary"
          onChange={[Function]}
          placeholder="Float only"
          type="number"
          value={0}
        >
          <input
            className="Input__Input-ixjKAz daZkvy"
            kind="primary"
            onChange={[Function]}
            placeholder="Float only"
            type="number"
            value={0}
          />
        </Input>
        <ControlNumber__ButtonWrapper>
          <div
            className="ControlNumber__ButtonWrapper-iczkcP gmGCvf"
          >
            <ButtonClear
              onClick={[Function]}
            >
              <P
                onClick={[Function]}
              >
                <Component
                  className="P__P-KJbCR huqyql"
                  onClick={[Function]}
                >
                  <div
                    className="P__P-KJbCR huqyql"
                    onClick={[Function]}
                  >
                    <ButtonClear__StyledA>
                      <A
                        className="ButtonClear__StyledA-hPckxD cJqJoD"
                        color="primary"
                      >
                        <a
                          className="ButtonClear__StyledA-hPckxD cJqJoD A__A-cCPuKx fpwonb"
                          color="primary"
                        >
                          <IconDelete
                            size="1em"
                          >
                            <svg
                              fill="currentColor"
                              height="1em"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 24 24"
                              width="1em"
                            >
                              <path
                                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm9-10h1v10h-1V9zm-4 0h2v10h-2V9zM8 9h1v10H8V9zm7.5-5l-1-1h-5l-1 1H5v2h14V4h-3.5z"
                              />
                            </svg>
                          </IconDelete>
                          Clear
                        </a>
                      </A>
                    </ButtonClear__StyledA>
                  </div>
                </Component>
              </P>
            </ButtonClear>
            <Button
              active={false}
              block={false}
              component="button"
              disabled={false}
              kind="primary"
              onClick={[Function]}
              round={false}
              size="normal"
              square={false}
            >
              <BaseComponent
                active={false}
                block={false}
                className="Button__Button-jkHDFw hzHJoG"
                component="button"
                disabled={false}
                kind="primary"
                onClick={[Function]}
                round={false}
                size="normal"
                square={false}
              >
                <button
                  className="Button__Button-jkHDFw hzHJoG"
                  onClick={[Function]}
                >
                  Ok
                </button>
              </BaseComponent>
            </Button>
          </div>
        </ControlNumber__ButtonWrapper>
      </div>
    </ControlNumber__Container>
  </ControlNumber>
</DataChannelAdapter>
`;
